--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -259,66 +259,68 @@
                                 </div> -->
                             </div>
                             <div class="withoutBorWrap clearfix mb-2">
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">   
-                                        <label>Policy Ded Amount</label>
-                                        <input type="text" ng-model="claim.policyDedAmount">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">
-                                        <label>Penalty Amount</label>
-                                        <input type="text" ng-model="claim.penaltyAmount">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">
-                                        <label>Suggessted Amt</label>
-                                        <input type="text" ng-model="claim.suggesstedAmount">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">
-                                        <label>Approved Amount</label>
-                                        <input type="text" ng-model="claim.approvedAmount">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">
-                                        <label>Rejected Amount</label>
-                                        <input type="text" ng-model="claim.rejectedAmount">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-1 float-left">
-                                    <md-input-container flex-gt-sm style="margin-top: 18px;">
-                                        <label>Status</label>
-                                        <input type="text" ng-model="claim.status">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-6 float-left">
-                                    <div class="btn-group btn-group-sm claimStatusBtns mt-2 float-right" role="group" aria-label="Basic example">
-                                        <button type="button" class="btn btn-secondary">
-                                            <span class="oi" data-glyph="check"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-secondary">
-                                            <span class="oi" data-glyph="reload"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-secondary">
-                                            <span class="oi" data-glyph="thumb-up"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-secondary">
-                                            <span class="oi" data-glyph="thumb-down"></span>
-                                        </button>
-                                        <button type="button" class="btn btn-secondary" ng-click="deleteRecord($index);">
-                                            <span class="oi" data-glyph="delete"></span>
-                                        </button>
-                                        <!-- <div class="col-sm-2 float-left pb-1"> -->
-                                            <a href="javascript:;" class="custCheckboxBtn float-right ml-3" ng-click="claim.onCheck=!claim.onCheck" ng-class="{custCheckboxBtnSected : claim.onCheck}">
-                                                <span class="oi" data-glyph="check"></span>
-                                            </a>
-                                        <!-- </div> -->
+                                <div layout-gt-sm="row">
+                                    <div class="float-left">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">   
+                                            <label>Policy Ded Amount</label>
+                                            <input type="text" ng-model="claim.policyDedAmount">
+                                        </md-input-container>
                                     </div>
-                                </div>
+                                    <div class="float-left">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">
+                                            <label>Penalty Amount</label>
+                                            <input type="text" ng-model="claim.penaltyAmount">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="float-left">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">
+                                            <label>Suggessted Amt</label>
+                                            <input type="text" ng-model="claim.suggesstedAmount">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="float-left">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">
+                                            <label>Approved Amount</label>
+                                            <input type="text" ng-model="claim.approvedAmount">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="float-left">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">
+                                            <label>Rejected Amount</label>
+                                            <input type="text" ng-model="claim.rejectedAmount">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="col-sm-3 float-left" style="width: auto !important;">
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">
+                                            <label>Status</label>
+                                            <input type="text" ng-model="claim.status">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="float-left">
+                                        <div class="btn-group btn-group-sm claimStatusBtns mt-2 float-right" role="group" aria-label="Basic example">
+                                            <button type="button" class="btn btn-secondary">
+                                                <span class="oi" data-glyph="check"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-secondary">
+                                                <span class="oi" data-glyph="reload"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-secondary">
+                                                <span class="oi" data-glyph="thumb-up"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-secondary">
+                                                <span class="oi" data-glyph="thumb-down"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-secondary" ng-click="deleteRecord($index);">
+                                                <span class="oi" data-glyph="delete"></span>
+                                            </button>
+                                            <!-- <div class="col-sm-2 float-left pb-1"> -->
+                                                <a href="javascript:;" class="custCheckboxBtn float-right ml-3" ng-click="claim.onCheck=!claim.onCheck" ng-class="{custCheckboxBtnSected : claim.onCheck}">
+                                                    <span class="oi" data-glyph="check"></span>
+                                                </a>
+                                            <!-- </div> -->
+                                        </div>
+                                    </div>
+                                </div>    
                             </div>
                             <div class="withBorGrayTxtWrap clearfix">
                                 <div class="col-sm-3 float-left pb-1" style="border: 1px solid #b3b3b3;margin: 0 3px;">
