--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -55,7 +55,7 @@
                         </md-input-container>
                     </div>
                     <div class="searchColm align-middle text-center" ng-click="click();" style="width: auto !important;">
-                        <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
+                        <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle" style="margin-top:1rem!important;">
                             <span class="oi align-middle" data-glyph="magnifying-glass"></span>
                         </a>
                     </div>
