--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -189,7 +189,7 @@
                 <div class="clearfix  mt-4">
                     <h3 class="innerHeadText float-left">Claim Treatment/Service Level</h3><div class="currencyType float-left">Currency: AED</div>
                     <a href="javascript:;" class="custCheckboxBtn float-right ml-3" ng-init="checkAll=false;" ng-class="{custCheckboxBtnSected : checkAll}" ng-click="checkAll=!checkAll;selectAll(checkAll);">
-                        <span class="oi" data-glyph="check"></span>
+                        <span class="oi" data-glyph="check" style="top:0px !important"></span>
                     </a>
                     <div class="btn-group btn-group-sm claimStatusBtns float-right" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-secondary">
@@ -315,7 +315,7 @@
                                             </button>
                                             <!-- <div class="col-sm-2 float-left pb-1"> -->
                                                 <a href="javascript:;" class="custCheckboxBtn float-right ml-3" ng-click="claim.onCheck=!claim.onCheck" ng-class="{custCheckboxBtnSected : claim.onCheck}">
-                                                    <span class="oi" data-glyph="check"></span>
+                                                    <span class="oi" data-glyph="check" style="top:0px !important"></span>
                                                 </a>
                                             <!-- </div> -->
                                         </div>
